opam-version: "2.0"
version: "4.12.0+dev"
synopsis: "OCaml development version"
depends: [
  "ocaml" {= "4.12.0" & post}
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
setenv: CAML_LD_LIBRARY_PATH = "%{lib}%/stublibs"
build: [
  ["autoconf"]
  ["./configure" "--prefix=%{prefix}%" "--enable-middle-end=closure" "--with-dune=/home/joseph/Github/compilers-dev/dune/dune.exe"]
  [make "-j%{jobs}%"]
]
install: [make "install"]
maintainer: "caml-list@inria.fr"
homepage: "https://github.com/ocaml/ocaml/"
bug-reports: "https://github.com/ocaml/ocaml/issues"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
]
